tests/snapshots/corpus__ast@001.kdl.snap
---
source: tests/corpus.rs
expression: "title \"Hello, World\"\n"
---
Document {
    nodes: [
        Node {
            span: 0..21,
            name: "title",
            ty: None,
            attrs: [
                Attribute {
                    span: 6..20,
                    name: None,
                    ty: None,
                    value: String(
                        "Hello, World",
                    ),
                },
            ],
            children: None,
        },
    ],
    ..
}
