tests/snapshots/corpus__ast@002.kdl.snap
---
source: tests/corpus.rs
expression: "bookmarks 12 15 188 1234\n"
---
Document {
    nodes: [
        Node {
            span: 0..25,
            ty: None,
            name: "bookmarks":0..9,
            attrs: [
                Attr {
                    span: 10..12,
                    name: None,
                    ty: None,
                    value: 12:10..12,
                },
                Attr {
                    span: 13..15,
                    name: None,
                    ty: None,
                    value: 15:13..15,
                },
                Attr {
                    span: 16..19,
                    name: None,
                    ty: None,
                    value: 188:16..19,
                },
                Attr {
                    span: 20..24,
                    name: None,
                    ty: None,
                    value: 1234:20..24,
                },
            ],
            children: [],
        },
    ],
}
