tests/snapshots/corpus__ast@003.kdl.snap
---
source: tests/corpus.rs
expression: "author \"Alex Monad\" email=\"alex@example.com\" active=true\n"
---
Document {
    nodes: [
        Node {
            span: 0..57,
            ty: None,
            name: "author":0..6,
            attrs: [
                Attr {
                    span: 7..19,
                    name: None,
                    ty: None,
                    value: "Alex Monad":7..19,
                },
                Attr {
                    span: 20..44,
                    name: Some(
                        "email":20..19,
                    ),
                    ty: None,
                    value: "alex@example.com":25..44,
                },
                Attr {
                    span: 45..56,
                    name: Some(
                        "active":45..44,
                    ),
                    ty: None,
                    value: true:51..56,
                },
            ],
            children: [],
        },
    ],
}
