tests/snapshots/corpus__ast@004.kdl.snap
---
source: tests/corpus.rs
expression: "contents {\n  section \"First section\" {\n    paragraph \"This is the first paragraph\"\n    paragraph \"This is the second paragraph\"\n  }\n}\n"
---
Document {
    nodes: [
        Node {
            span: 0..133,
            ty: None,
            name: "contents":0..8,
            attrs: [],
            children: [
                Node {
                    span: 13..131,
                    ty: None,
                    name: "section":13..20,
                    attrs: [
                        Attr {
                            span: 21..36,
                            name: None,
                            ty: None,
                            value: "First section":21..36,
                        },
                    ],
                    children: [
                        Node {
                            span: 43..83,
                            ty: None,
                            name: "paragraph":43..52,
                            attrs: [
                                Attr {
                                    span: 53..82,
                                    name: None,
                                    ty: None,
                                    value: "This is the first paragraph":53..82,
                                },
                            ],
                            children: [],
                        },
                        Node {
                            span: 87..128,
                            ty: None,
                            name: "paragraph":87..96,
                            attrs: [
                                Attr {
                                    span: 97..127,
                                    name: None,
                                    ty: None,
                                    value: "This is the second paragraph":97..127,
                                },
                            ],
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
