tests/snapshots/corpus__ast@005.kdl.snap
---
source: tests/corpus.rs
expression: "node1; node2; node3;\n"
---
Document {
    nodes: [
        Node {
            span: 0..6,
            ty: None,
            name: "node1":0..5,
            attrs: [],
            children: [],
        },
        Node {
            span: 7..13,
            ty: None,
            name: "node2":7..12,
            attrs: [],
            children: [],
        },
        Node {
            span: 14..20,
            ty: None,
            name: "node3":14..19,
            attrs: [],
            children: [],
        },
    ],
}
