tests/snapshots/corpus__ast@009.kdl.snap
---
source: tests/corpus.rs
expression: "num 1.234e-25\n"
---
Document {
    nodes: [
        Node {
            span: 0..14,
            ty: None,
            name: "num":0..3,
            attrs: [
                Attr {
                    span: 4..13,
                    name: None,
                    ty: None,
                    value: 0.0000000000000000000000001234:4..13,
                },
            ],
            children: [],
        },
    ],
}
