tests/snapshots/corpus__ast@010.kdl.snap
---
source: tests/corpus.rs
expression: "my-hex 0xdeadbeef\nmy-octal 0o755\nmy-binary 0b10101101\n"
---
Document {
    nodes: [
        Node {
            span: 0..18,
            ty: None,
            name: "my-hex":0..6,
            attrs: [
                Attr {
                    span: 7..17,
                    name: None,
                    ty: None,
                    value: 3735928559:7..17,
                },
            ],
            children: [],
        },
        Node {
            span: 18..33,
            ty: None,
            name: "my-octal":18..26,
            attrs: [
                Attr {
                    span: 27..32,
                    name: None,
                    ty: None,
                    value: 493:27..32,
                },
            ],
            children: [],
        },
        Node {
            span: 33..54,
            ty: None,
            name: "my-binary":33..42,
            attrs: [
                Attr {
                    span: 43..53,
                    name: None,
                    ty: None,
                    value: 173:43..53,
                },
            ],
            children: [],
        },
    ],
}
