tests/snapshots/corpus__ast@011.kdl.snap
---
source: tests/corpus.rs
expression: "bignum 1_000_000\n"
---
Document {
    nodes: [
        Node {
            span: 0..17,
            ty: None,
            name: "bignum":0..6,
            attrs: [
                Attr {
                    span: 7..16,
                    name: None,
                    ty: None,
                    value: 1000000:7..16,
                },
            ],
            children: [],
        },
    ],
}
