tests/snapshots/corpus__ast@017.kdl.snap
---
source: tests/corpus.rs
expression: "node{}\n"
---
Document {
    nodes: [
        Node {
            span: 0..6,
            ty: None,
            name: "node":0..4,
            attrs: [],
            children: [],
        },
    ],
}
